<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/incoming"
            android:icon="@drawable/incoming"
            android:title="@string/drawer_in" />
        <item
            android:id="@+id/alltasks"
            android:icon="@drawable/all_tasks"
            android:title="@string/drawer_alltasks" />
        <item
            android:id="@+id/today"
            android:icon="@drawable/today"
            android:title="@string/drawer_today" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/settings_icon_black"
            android:title="@string/drawer_settings" >
        </item>
    </group>
</menu>