<?xml version="1.0" encoding="utf-8"?>


        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            >



            <item
                android:id="@+id/add_info"
                android:title="@string/add_info"
                app:showAsAction="always"
                android:icon="@drawable/add_info2" />
            <item
                android:id="@+id/add_task"
                android:title="@string/add_task"
                app:showAsAction="always"
                android:icon="@drawable/add_task"/>
            <item
                android:id="@+id/add_meeting"
                android:title="@string/addmeeting"
                app:showAsAction="always"
                android:icon="@drawable/add_meeting2"/>
            <item
                android:id="@+id/add_project"
                android:title="@string/add_project"
                app:showAsAction="always"
                android:icon="@drawable/add_project"/>

        </menu>
