<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >


                <TextView
                    android:id="@+id/taskTitle"
                    style="@style/textSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taskTitle"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/tasktype"
                        android:layout_width="@dimen/wh_btn_small"
                        android:layout_height="@dimen/wh_btn_small"
                        android:layout_weight="0"
                        android:background="?android:attr/selectableItemBackground"


                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="Name"
                        android:id="@+id/tasktitle"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        style="@style/textLink"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Name"
                    android:id="@+id/tasktitle2"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    style="@style/txtTaskTitle"
                    android:paddingLeft="5sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>



            <TextView
                android:id="@+id/detailTask"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoFullTitle"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Name"
                    android:id="@+id/taskdetail"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    style="@style/txtTaskTitle"
                    android:paddingLeft="5sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/parentTask"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parentTask"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/parentTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/childTask"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/childTask"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/childTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/project"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/taskproject"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"

                >
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/priority"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/taskpriority"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"

                >
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/dateBegin"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datebegin"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/taskDateBegin"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"

                >
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/dateEnd"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateend"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/taskDateEnd"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"

                >
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tags"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/taskTags"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"

                >
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/target"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/target"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/taskTarget"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"

                >
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/contexts"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contexts"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/taskContexts"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"

                >
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/comments"
                style="@style/textSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>